# pigeon-old

./: .env  .gitignore  Cargo.toml  build.rs
crates/pigeon-auth/: Cargo.toml  build.rs
crates/pigeon-auth/src/: auth.rs  lib.rs
crates/pigeon-gateway/: Cargo.toml
crates/pigeon-gateway/src/: main.rs
crates/pigeon-logic/: Cargo.toml
crates/pigeon-logic/src/: test.rs
crates/pigeon-pingora/: Cargo.toml
crates/pigeon-proto/: Cargo.toml  build.rs
crates/pigeon-proto/protos/: main.proto  test.proto
crates/pigeon-proto/src/: errors.rs  lib.rs
crates/pigeon-runner/: Cargo.toml
crates/pigeon-runner/src/: decode.rs  main.rs  network.rs
crates/pigeon-server/: Cargo.toml
crates/pigeon-server/src/: main.rs
crates/pigeon-server/src/actors/: game.rs  player.rs
protos/: auth.proto  common.proto
src/: error.rs  main.rs  protos.rs
src/ecs/: components.rs  game.rs  mod.rs  systems.rs
src/handlers/: chat.rs  mod.rs  movement.rs  player.rs
src/managers/: chat.rs  mod.rs  player.rs
src/network/: mod.rs  packet.rs  server.rs  session.rs
