[package]
name = "pigeon"
version = "0.1.0"
description = "A rogue-like game server."
authors = ["EvanLuo42"]
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
prost = "0.12.6"
thiserror = "1.0.61"
anyhow = "1.0.86"
bytes = "1.6.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
async-trait = "0.1.80"
xactor = { version = "0.7.11", features = ["runtime-tokio"], default-features = false }
bevy_ecs = "0.14.0-rc.2"

[build-dependencies]
prost-build = "0.12.6"