[package]
name = "pigeon-auth"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tonic = "0.11.0"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"

async-stream = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.11"
