[package]
name = "pigeon-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
pigeon-proto = { path = "../pigeon-proto" }
pigeon-logic = { path = "../pigeon-logic" }

dotenv = "0.15.0"
actix = { workspace = true }
actix-rt = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = "1.37.0"
prost = "0.12.4"
